[gd_scene load_steps=4 format=3 uid="uid://b0ddo4votprvs"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_bgvkr"]
[ext_resource type="Theme" uid="uid://cx4el83745k4k" path="res://new_theme.tres" id="1_dpcbm"]
[ext_resource type="AudioStream" uid="uid://lna45ns8net2" path="res://assets/music/mathmagician.wav" id="3_gdlkh"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bgvkr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = -320.0
offset_top = -184.0
offset_right = 320.0
offset_bottom = 176.0
theme = ExtResource("1_dpcbm")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dpcbm")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "Math Magician!"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start Game"

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "How To Play"

[node name="QuitGame" type="Button" parent="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit Game"

[node name="HowToPlay" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_left = -320.0
offset_top = -184.0
offset_right = 320.0
offset_bottom = 176.0
theme = ExtResource("1_dpcbm")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HowToPlay"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HowToPlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 25
text = "How To Play"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/HowToPlay/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme = ExtResource("1_dpcbm")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 16
text = "You are the Math Magician! You've been hired to use your math magic to change the size and weight of magical weights for the League of Swole Golems. 

Start off with some low level add and subtract spells, and then as you progress unlock higher level spells, like multiply, divide, and square spells for further math mastery!"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HowToPlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="MainMenuButton" type="Button" parent="CanvasLayer/HowToPlay/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
text = "Main Menu
"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -4)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gdlkh")
autoplay = true

[connection signal="pressed" from="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_time_trial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="CanvasLayer/HowToPlay/CenterContainer/VBoxContainer/MarginContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
